# ebrag-vecdb-2026-paper

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt
paper/: main.tex  references.bib
paper/results/: c4_answer_bearing.tex  c4_detector_ladder.tex  c4_fever.tex  c4_ladder_per_model.tex  c4_prompt_robustness.tex  c4_retrieval_realism.tex  c4_sweep.tex
reports/: c4_answer_bearing.json  c4_detector_comparison.json  c4_fever_validation.json  c4_ladder_per_model.json  c4_prompt_robustness.json  c4_realism_reliable.json  c4_retrieval_realism.json  c4_sweep.json
src/ebrag/: __init__.py
src/ebrag/benchmarks/: __init__.py  conflict_data.py  conflict_loaders.py  conflict_metrics.py  metrics.py  models.py  sweeps.py
src/ebrag/benchmarks/experiments/: __init__.py  c4_answer_bearing.py  c4_answer_relevance.py  c4_conflict_detection.py  c4_detector_comparison.py  c4_fever_validation.py  c4_ladder_per_model.py  c4_probes.py  c4_prompt_robustness.py  c4_realism.py  c4_render_tables.py  c4_retrieval_realism.py  c4_sweep.py  llm_helpers.py
src/ebrag/chat/: __init__.py  llm.py  models.py  pipeline.py  prompts.py  tools.py
src/ebrag/common/: __init__.py  config.py  logging.py  types.py
src/ebrag/dialectic/: __init__.py  calibration.py  conflict.py  llm_judge.py  models.py  provenance.py  synthesis.py
src/ebrag/retrieval/: __init__.py  dense.py  hybrid.py  models.py  planner.py  sparse.py
tests/: test_c4_render_tables.py
