[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebrag-vecdb-2026-paper"
version = "1.0.0"
description = "Reproducibility artefacts for 'An Input-Regime Audit of Conflict Detection for RAG' (VecDB@VLDB 2026)"
authors = [{name = "Dipankar Sarkar", email = "dipankar@skelfresearch.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"
keywords = [
  "rag", "retrieval-augmented-generation", "conflict-detection",
  "natural-language-inference", "vector-database", "vldb",
  "llm-as-judge", "fever", "deberta",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ebrag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
